--- a/css/isdisright.css
+++ b/css/isdisright.css
@@ -1,8 +1,9 @@
 body {
-    text-align: center;
-    background-color: white;
-    margin: 0;
+  text-align: center;
+  background-color:#f4afb3;
+  margin: 0;
 }
+
 h1, h2 {
   font-family: 'Helvetica Neue', sans-serif;
   font-size: 190px;
@@ -16,10 +17,11 @@ h1, h2 {
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
-p {
+
+p{
   color: #111;
-  font-family: 'Bebas', 'Cattieshine';
-  font-size: 20px;
+  font-family: 'Helvetica Neue';
+  font-size: 15px;
   letter-spacing: 2px;
   text-align: justify;
   margin-left: 15%;
@@ -29,18 +31,93 @@ p {
 
 a:link, a:visited {
   color: black;
-  padding: 14px 25px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
+  padding: 5px;
 }
 
 .menubar {
   width:100%;
-  font-family: 'Bebas';
+  margin-left: 0;
+  text-align: left;
+  padding: 10px 0px;
+  border-bottom: solid;
+  border-color: #BDC8C0;
+  border-width: 0.5px;
+  position: fixed;
+  background-color: white;
+  display: flex;
+  align-items: center;
 }
 
-.menutext
-{
+.menutext{
   width: max-content;
+  font-family: 'Bebas';
+  padding: 0;
+  margin:0;
+  font-size: 25px;
+  margin-left: 15px;;
+  opacity: 65%;
+}
+
+.Logo{
+  margin-left:15px;
+}
+
+.starter{
+  width: 100%;
+  height: 100%;
+  background-color: white;
+}
+
+.sidebar{
+  border:solid;
+  border-width: 1px;;
+  width:30%;
+  min-width: 400px;;
+  height:100%;
+}
+
+.items{
+  height:100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.footer{
+  display: flex;
+  justify-content: center;
+  height: 10%;
+}
+
+.namecol{
+  width: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.cc{
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
+
+.footertext{
+  padding: 0;
+  margin: 0;
+}
+
+.socialmedia{
+  width: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
