--- a/css/profile.css
+++ b/css/profile.css
@@ -5,29 +5,12 @@ body {
     scroll-behavior: smooth;
 }
 
-h1{
-    font-family: 'Helvetica Neue', sans-serif;
-    font-size: 190px;
-    font-weight: bold;
-    letter-spacing: -10px;
-    line-height: 1.2;
-    margin-top: 60px;
-    margin-bottom: -35px;
-    text-align:center;
-	background: linear-gradient(to right, #ff7aa0 10%, 	#FFFF00 100%);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-}
-
 p{
     color: #111;
     font-family: 'Helvetica Neue';
     font-size: 15px;
     letter-spacing: 2px;
     text-align: justify;
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-bottom: 0;
 }
   
 a:link, a:visited {
@@ -47,12 +30,21 @@ a:link, a:visited {
     border-color: #BDC8C0;
     border-width: 0.5px;
     position: fixed;
+    left:0;
+    right:0;
+    top:-71px;
     background-color: white;
     display: flex;
     align-items: center;
+    z-index: 1;
+    transition: top 200ms ease;
+}
+
+.menubar.slide{
+    top:0;
 }
   
-.menutext{
+.menutext1, .menutext2{
     width: max-content;
     font-family: 'Bebas';
     padding: 0;
@@ -68,6 +60,12 @@ a:link, a:visited {
 
 .page{
     background-color: white;
+    padding-bottom: 50px;
+    min-width: 1000px;
+}
+
+.self, .firstbox, .secondbox, .thirdbox{
+    min-width: 800px;
 }
 
 .starter{
@@ -77,8 +75,7 @@ a:link, a:visited {
 .self{
     display:flex;
     align-items: center;
-    margin-left: 200px;
-    margin-right: 200px;
+    margin: 0px 10% 10%;
 }
 
 .icondiv{
@@ -105,14 +102,62 @@ a:link, a:visited {
     padding:0;
 }
 
+.firsthead, .secondhead, .thirdhead{
+    font-family: 'Bebas';
+    font-size: 80px;
+    margin: 0;
+    position: absolute;
+    top: -83px;
+}
+
+.firsthead{
+    color: #B5BA7e;
+    left: 24px;
+}
+.secondhead{
+    color: #e18d96;
+    right:24px;
+}
+
+.thirdhead{
+    color: #a02c2d;
+    left: 24px;
+}
+
+.firsttext, .secondtext, .thirdtext{
+    margin:0;
+    padding: 30px 45px;
+}
+
+.firstbox, .secondbox, .thirdbox{
+    border: solid;
+    border-width: 10px;
+    margin: 91px 100px 0;
+    position: relative;
+}
+
+.firstbox{
+    border-color: #B5BA7e;
+}
+
+.secondbox{
+    border-color:#e18d96;
+}
+
+.thirdbox{
+    border-color:#a02c2d;
+}
+
 .footer{
     display: flex;
     justify-content: center;
-    height: 10%;
+    height: 80px;
+    min-width: 1000px;
 }
   
 .namecol{
     width: 25%;
+    min-width: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -121,6 +166,7 @@ a:link, a:visited {
   
 .cc{
     width: 50%;
+    min-width: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -135,7 +181,13 @@ a:link, a:visited {
   
 .socialmedia{
     width: 25%;
+    min-width: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.menutext1, .menutext2:hover{
+    background-image: url("../images/highlight.png");
+    background-size: cover;
 }
