--- a/css/profile.css
+++ b/css/profile.css
@@ -7,7 +7,7 @@ body {
 
 p{
     color: #111;
-    font-family: 'Helvetica Neue';
+    font-family: 'Poppins';
     font-size: 15px;
     letter-spacing: 2px;
     text-align: justify;
